# data-pipeline-localiza

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dags/: transactions_pipeline.py
great_expectations/: great_expectations.yml
great_expectations/gx/: great_expectations.yml
great_expectations/gx/checkpoints/: transactions_checkpoint.yml
great_expectations/gx/expectations/: .ge_store_backend_id  transactions_suite.json
src/cleaning/: cleaner.py
src/ingestion/: reader.py
src/quality/: dq_suite.py
src/transforms/: aggregations.py
tests/: conftest.py
tests/unit/: test_aggregations.py  test_cleaner.py  test_dq_suite.py  test_reader.py
