[tool.poetry]
name = "data-pipeline"
version = "0.1.0"
description = "Pipeline de transações com Airflow, DuckDB e Great Expectations"
authors = ["Davi Hora <davihora@github.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
# NOTE: apache-airflow is provided by the base Docker image (apache/airflow:2.9.3-python3.11).
# It is listed here only to document the constraint; poetry install uses it for resolution.
python                           = ">=3.11,<3.13"
apache-airflow                   = "2.9.3"
apache-airflow-providers-common-io = ">=1.3.0"
duckdb                           = "0.10.3"
pyarrow                          = "16.1.0"
pandas                           = "2.2.2"
great-expectations               = "0.18.19"
python-dotenv                    = "1.0.1"

[tool.poetry.group.dev.dependencies]
pytest     = ">=8.2"
pytest-cov = ">=5.0"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
